--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,c
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,c
 
+
+### Python ###
+# Jupyter Notebook
+*checkpoints.ipynb
+
 ### C ###
 # Prerequisites
 *.d
