cpp( std, cv ) trial 1

--- a/opencv90/opencv90/opencv90.vcxproj
+++ b/opencv90/opencv90/opencv90.vcxproj
@@ -150,6 +150,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="opencv90.cpp" />
+    <ClCompile Include="proto.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
