--- a/HeadFirst_Csharp/DuckList/DuckList/DuckList.csproj
+++ b/HeadFirst_Csharp/DuckList/DuckList/DuckList.csproj
@@ -42,9 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Duck.cs" />
+    <Compile Include="DuckComparer.cs" />
+    <Compile Include="DuckComparerByKind.cs" />
+    <Compile Include="DuckComparerBySize.cs" />
     <Compile Include="KindOfDuck.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortCriteria.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
