--- a/HeadFirst_Csharp/AgainSloppyJoe/AgainSloppyJoe/AgainSloppyJoe.csproj
+++ b/HeadFirst_Csharp/AgainSloppyJoe/AgainSloppyJoe/AgainSloppyJoe.csproj
@@ -119,6 +119,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MenuMaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
