created methods and fields of ExcuseManager Class

--- a/HeadFirst_Csharp/ExcuseManagerXAML/ExcuseManagerXAML/ExcuseManagerXAML.csproj
+++ b/HeadFirst_Csharp/ExcuseManagerXAML/ExcuseManagerXAML/ExcuseManagerXAML.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Common\ObservableDictionary.cs" />
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
+    <Compile Include="Excuse.cs" />
     <Compile Include="ExcuseManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
