--- a/HeadFirst_Csharp/JimmysApp/JimmysApp/JimmysApp.csproj
+++ b/HeadFirst_Csharp/JimmysApp/JimmysApp/JimmysApp.csproj
@@ -111,11 +111,16 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="QueryDetailZoom.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PriceRange.cs" />
     <Compile Include="Comic.cs" />
     <Compile Include="ComicQuery.cs" />
     <Compile Include="ComicQueryManager.cs" />
@@ -127,8 +132,12 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Purchase.cs" />
     <Compile Include="QueryDetail.xaml.cs">
       <DependentUpon>QueryDetail.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="QueryDetailZoom.xaml.cs">
+      <DependentUpon>QueryDetailZoom.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -139,7 +148,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\bluegray_250x250.jpg" />
+    <Content Include="Assets\Captain Amazing Issue 19 cover.png" />
+    <Content Include="Assets\Captain Amazing Issue 36 cover.png" />
+    <Content Include="Assets\Captain Amazing Issue 57 cover.png" />
+    <Content Include="Assets\Captain Amazing Issue 6 cover.png" />
+    <Content Include="Assets\Captain Amazing Issue 68 cover.png" />
+    <Content Include="Assets\Captain Amazing Issue 74 cover.png" />
+    <Content Include="Assets\Captain Amazing Issue 83 cover.png" />
+    <Content Include="Assets\Captain Amazing Issue 97 cover.png" />
     <Content Include="Assets\captain_amazing_250x250.jpg" />
+    <Content Include="Assets\captain_amazing_zoom_250x250.jpg" />
     <Content Include="Assets\Logo.scale-100.png" />
     <Content Include="Assets\purple_250x250.jpg" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
