--- a/HeadFirst_Csharp/DelegateChef/DelegateChef/DelegateChef.csproj
+++ b/HeadFirst_Csharp/DelegateChef/DelegateChef/DelegateChef.csproj
@@ -53,6 +53,7 @@
     <Compile Include="GetSecretIngredient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Suzanne.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
