--- a/HeadFirst_Csharp/BallEvent/BallEvent/BallEvent.csproj
+++ b/HeadFirst_Csharp/BallEvent/BallEvent/BallEvent.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Common\ObservableDictionary.cs" />
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
+    <Compile Include="Delegate.cs" />
     <Compile Include="Fan.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
