added Bat class

--- a/HeadFirst_Csharp/BallEvent/BallEvent/BallEvent.csproj
+++ b/HeadFirst_Csharp/BallEvent/BallEvent/BallEvent.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Ball.cs" />
     <Compile Include="BallEventArgs.cs" />
     <Compile Include="BaseballSimulator.cs" />
+    <Compile Include="Bat.cs" />
     <Compile Include="Common\NavigationHelper.cs" />
     <Compile Include="Common\ObservableDictionary.cs" />
     <Compile Include="Common\RelayCommand.cs" />
